# stationarity-and-differencing-for-time-series-in-python

./: README.md  article.md  config.yaml  main.py  pyproject.toml
outputs/: adf_results.csv
polars_duckdb/: core.py  main.py
